# BetterPlugin

./: .gitignore  collab-plugin-0.0.1.html  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json  들어가야 할 기능.rtf
.github/workflows/: sync-frontend.yml
Mix Player/Builds/MacOSX/: mixplayericon.icns
Mix Player/Builds/MacOSX/Mix Player.xcodeproj/: project.pbxproj
Mix Player/Builds/MacOSX/MixPlayer.xcodeproj/: project.pbxproj
Mix Player/Builds/MacOSX/MixPlayer.xcodeproj/project.xcworkspace/xcuserdata/jasonpark.xcuserdatad/: UserInterfaceState.xcuserstate
Mix Player/Builds/MacOSX/MixPlayer.xcodeproj/xcuserdata/jasonpark.xcuserdatad/xcschemes/: xcschememanagement.plist
Mix Player/JuceLibraryCode/: JuceHeader.h
Mix Player/Source/: AudioEngine.cpp  AudioEngine.h  GoniometerComponent.cpp  GoniometerComponent.h  LUFSMeterComponent.cpp  LUFSMeterComponent.h  LibraryManager.cpp  LibraryManager.h  LibraryPanelComponent.cpp  LibraryPanelComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MeteringEngine.cpp  MeteringEngine.h  MiniPlayerComponent.cpp  MiniPlayerComponent.h  MonoToggleButton.cpp  MonoToggleButton.h  SpectrumAnalyzerComponent.cpp  SpectrumAnalyzerComponent.h  TransportComponent.cpp  TransportComponent.h  TruePeakMeterComponent.cpp  TruePeakMeterComponent.h  VersionListComponent.cpp  VersionListComponent.h  VersionManager.cpp  VersionManager.h  WaveformComponent.cpp  WaveformComponent.h
Plugin/: .gitignore  CMakeLists.txt  build.sh
Plugin/Resources/: CoOp.entitlements
Plugin/Source/: DragMonitor.h  DragMonitor.mm  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VideoCapture.h  VideoCapture.mm
public/: collab.html
src/: App.tsx  index.css
src/components/: FloatingOrbs.tsx  LoginForm.tsx  SignUpForm.tsx
src/components/collab/: AddFriendPanel.tsx  ChatView.tsx  ChessView.tsx  ConversationsPanel.tsx  DisplayPanel.tsx  FriendsList.tsx  GameListView.tsx  InformationPanel.tsx  LiveChat.tsx  LivePanel.tsx  LiveViewer.tsx  NotificationSettingsPanel.tsx  ProfilePanel.tsx  SettingsPanel.tsx  TetrisView.tsx
src/hooks/: useChess.ts  useConversations.ts  useFollows.ts  useFriendEvents.ts  useFriends.ts  useGameRoom.ts  useLive.ts  useLiveBroadcaster.ts  useLiveChat.ts  useLiveViewer.ts  useMediaSource.ts  useMessages.ts  useNotifications.ts  usePresence.ts  useProfiles.ts  useTetris.ts  useTetrisRoom.ts  useTracks.ts
src/lib/: dawAudio.ts  juceBridge.ts  nativeVideo.ts  supabase.ts  webrtc.ts
src/pages/: AdminPage.tsx  AuthPage.tsx  CollabPage.tsx  auth.css  collab.css
src/types/: collab.ts  live.ts
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/cleanup-attachments/: index.ts
supabase/migrations/: 20260427_track_privacy.sql
